--- a/ciet_pmu/templates/partials/footer.html
+++ b/ciet_pmu/templates/partials/footer.html
@@ -1,13 +1,13 @@
  {% load static %}
 {% load static tailwind_tags %}
  
- <footer class="bg-gray-900 text-white py-6">
-  <div class="container mx-auto px-4">
-    <div class="flex flex-col md:flex-row justify-between items-center space-y-8 md:space-y-0 md:space-x-12">
-      <div class="text-center md:text-left">
+<footer class="w-full bg-gray-900 text-white py-6">
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="flex flex-col md:flex-row justify-between items-center gap-y-10 md:gap-y-0 md:space-x-12">
+      <div class="text-center md:text-right max-w-md w-full">
         <h3 class="text-lg font-semibold text-gray-100 mb-4">Contact Us</h3>
         <p class="text-sm text-gray-300 mb-4">Central Institute of Educational Technology(CIET), National Council of Educational Research And Training (NCERT), Sri Aurobindo Marg, New Delhi-110016</p>
-        <ul class="text-sm text-gray-300 space-y-3">
+        <ul class="text-sm text-gray-300 space-y-3 text-center md:text-left">
           <li class="flex items-center justify-center md:justify-start"><span class="mr-2 bg-green-600 rounded-full p-1.5 text-white">✉</span> <span class="hover:text-green-400 transition-colors">dceta.ncert@nic.in</span></li>
           <li class="flex items-center justify-center md:justify-start"><span class="mr-2 bg-green-600 rounded-full p-1.5 text-white">📞</span> <span class="hover:text-green-400 transition-colors">+91 8800440559 (PMeVidya)</span></li>
           <li class="flex items-center justify-center md:justify-start"><span class="mr-2 bg-green-600 rounded-full p-1.5 text-white">📠</span> <span class="hover:text-green-400 transition-colors">+91 11 2686 4141</span></li>
@@ -15,7 +15,7 @@
       </div>
       <div class="text-center md:text-right">
         <h3 class="text-lg font-semibold text-gray-100 mb-4">Follow Us</h3>
-        <div class="flex justify-center md:justify-end space-x-4 mb-4">
+        <div class="flex justify-center md:justify-end space-x-4 mb-6 md:mb-4">
           <a href="https://www.facebook.com/ncertofficial/" target="_blank" class="hover:opacity-75 transition-opacity">
             <img src="{% static 'images/footer_images/fb.png' %}" alt="FB" class="h-7 w-7">
           </a>
@@ -34,9 +34,9 @@
         </div>
       </div>
     </div>
-    <div class="mt-10 text-center">
-      <p class="text-sm text-gray-300">© 2025 CIET PMU. All rights reserved.</p>
-      <p class="text-sm text-gray-900 mt-2">Designed by SMS</p>
-    </div>
+    <div class="mt-8 text-center text-xs sm:text-sm text-gray-400">
+  <p>© 2025 CIET PMU. All rights reserved.</p>
+  <p class="mt-1 text-gray-500">Designed by SMS</p>
+</div>
   </div>
 </footer>
