--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/budget.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/budget.html
@@ -2,32 +2,13 @@
 {% load static %} {% load static tailwind_tags %} 
 
 {% block title %}CIET PMU - Budget{% endblock %} 
-
 {% block content %} 
-<style>
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  .fade-in {
-    animation: fadeIn 0.5s ease-in-out forwards;
-  }
-  .section {
-    display: block;
-  }
-</style>
 
-<div class="flex h-screen">
+<div class="flex min-h-screen">
   {% include "partials/admin_sidebar.html" %}
 
-  <section
-    id="budget"
-    class="section w-full flex justify-center items-center ml-[20%] p-6 overflow-auto fade-in"
-  >
+  <main class="flex-1 bg-gray-100 p-6">
+  <section id="budget" class="fade-in w-full p-6">
     <h2 class="text-2xl font-bold mb-4">Annual Budget</h2>
     <div class="bg-white p-4 rounded-lg shadow mb-6 flex justify-center">
       <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
@@ -76,34 +57,8 @@
         <p id="message" class="mt-4 text-center text-sm text-gray-600"></p>
       </div>
     </div>
-    <div class="bg-white p-4 rounded-lg shadow">
-      <h3 class="text-lg font-semibold">Budget History</h3>
-      <table class="w-full text-left">
-        <thead>
-          <tr class="border-b">
-            <th class="p-2">Date</th>
-            <th class="p-2">Type</th>
-            <th class="p-2">Amount</th>
-            <th class="p-2">Details</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="border-b">
-            <td class="p-2">2025-07-01</td>
-            <td class="p-2">Deposit</td>
-            <td class="p-2">5.34</td>
-            <td class="p-2">Deposit to balance</td>
-          </tr>
-          <tr class="border-b">
-            <td class="p-2">2025-07-02</td>
-            <td class="p-2">Withdrawal</td>
-            <td class="p-2">-3.45</td>
-            <td class="p-2">Tokens withdrawn</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
   </section>
+</main>
 </div>
 
 {% endblock %}
