--- a/ciet_pmu/templates/layout.html
+++ b/ciet_pmu/templates/layout.html
@@ -7,12 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="{% static "css/main.css" %}">
     {% tailwind_css %}
 </head>
 <body class="bg-gray-100 font-sans text-gray-900 antialiased"> 
     {% block content %}{% endblock %}
 
     {% include 'partials/footer.html' %}
-    
+
 </body>
 </html>
