--- a/ciet_pmu/templates/layout.html
+++ b/ciet_pmu/templates/layout.html
@@ -14,7 +14,8 @@
 <body class="bg-gray-100 font-sans text-gray-900 antialiased"> 
     {% block content %}{% endblock %}
 
-    {% include 'partials/footer.html' %}
-
+    <div class="mt-10">
+        {% include 'partials/footer.html' %}
+    </div>
 </body>
 </html>
