integrate db in admin forms

--- a/ciet_pmu/admin_dashboard/templates/admin_dashboard/project_pdf.html
+++ b/ciet_pmu/admin_dashboard/templates/admin_dashboard/project_pdf.html
@@ -26,6 +26,14 @@
         <td class="td_pdf">{{ p.program_sub_type }}</td>
       </tr>
       {% endfor %}
+      <tr>
+        <td class="td_pdf">Used Budget</td>
+        <td class="td_pdf">{{ total_used_budget }}</td>
+      </tr>
+      <tr>
+        <td class="td_pdf">Remaining Budget</td>
+        <td class="td_pdf">{{ remaining_budget }}</td>
+      </tr>
     </tbody>
   </table>
 </body>
