--- a/ciet_pmu/templates/partials/admin_sidebar.html
+++ b/ciet_pmu/templates/partials/admin_sidebar.html
@@ -7,7 +7,7 @@
           <img src="{% static 'images/admin_dashboard_images/dashboard.svg' %}" class="w-5 h-5"> <span class="text-black">Dashboard</span>
         </a>
         <a href="{% url 'projects' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-100 transition-all">
-          <img src="{% static 'images/admin_dashboard_images/projects.svg' %}" class="w-5 h-5"> <span class="text-black">Projects</span>
+          <img src="{% static 'images/admin_dashboard_images/projects.svg' %}" class="w-5 h-5"> <span class="text-black">Programs</span>
         </a>
         <a href="{% url 'budget' %}" class="flex items-center gap-3 p-2 rounded-lg hover:bg-gray-100 transition-all">
           <img src="{% static 'images/admin_dashboard_images/budget.svg' %}" class="w-5 h-5"> <span class="text-black">Budget</span>
